--- a/assets/litespeed-confs/index.html
+++ b/assets/litespeed-confs/index.html
@@ -11,7 +11,9 @@
 <body>
 
     <p>Congratulations! Your LiteSpeed installation finally works! Phew... </p>
-    <p>You can put stuffs under /var/</p>
+    <p>You can put stuffs under /var/www/lsws_vhosts/main/html</p>
+
+    <a href="/phpinfo.php">phpinfo.php</a>
 
 </body>
 
